--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-recaptcha": "^2.3.10",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
