--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-recaptcha": "^2.3.10",
+    "react-responsive": "^8.1.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
